<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group_log_reg.groupLoginFragment"
    android:background="@drawable/bakground_gradient">

    <ImageView
        android:contentDescription="@string/image"
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:alpha="0.1"
        android:src="@drawable/logo"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bt"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"

        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/tv_title"/>

    <EditText
        android:autofillHints="Nazwa sieci"
        android:id="@+id/et_ssid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/wifiName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/tv_subtitle"
        android:background="@drawable/edittext_layout"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_polacz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_ssid"
        android:background="@drawable/button_gradient"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="Wyślij SSIID"/>

    <EditText
        android:visibility="invisible"
        android:autofillHints="Password"
        android:id="@+id/et_pass_wifi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btn_polacz"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:inputType="textPassword"

        android:layout_centerInParent="true"
        android:background="@drawable/edittext_layout"
        android:textSize="15sp" />

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_polacz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pass_wifi"
        android:background="@drawable/button_gradient"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="Wyśli hasło"/>





</RelativeLayout>