<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarm.Model.AlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/LinearLayout1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/bakground_gradient">
            <TextView
                android:id="@+id/tv_logo"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_settings_white_24dp"
                android:text="@string/sets_ustawienia_konta"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </RelativeLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:paddingHorizontal="20dp"
       android:paddingVertical="10dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorAccent"
           android:text="@string/sets_nazwa_u_ytkownika"/>
       <TextView
           android:textSize="20sp"
           android:id="@+id/tv_sets_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorBlack"
           android:text=""/>
   </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sets_adres_email"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_sets_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sets_numer_relefonu"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_sets_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/sets_nazwa_grupy"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_sets_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="Numer telefonu"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_sets_phoneN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text=""/>
            <Button
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:id="@+id/btn_phoneCh"
                android:background="@drawable/button_gradient2_yellow"
                android:text="zmien numer"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/btn_logout"
        android:textColor="@color/colorWhite"
        android:layout_above="@id/btn_back"
        android:background="@drawable/button_gradient2_yellow" />
    <Button
        android:id="@+id/btn_back"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="11dp"
        android:textSize="16sp"
        android:background="@drawable/button_gradient2_yellow"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/btn_txt_confnij" />

</RelativeLayout>